--- a/css/boohoo.css
+++ b/css/boohoo.css
@@ -51,7 +51,7 @@ p {
   outline-offset: 2px;
 }
 
-.process-header {
+.process-title {
   text-align: center;
   padding: 2rem 1rem;
 }
@@ -122,7 +122,7 @@ p {
 
 .image-grid .process-img {
   width: 100%;
-  height: 300px;
+  height: 15rem;
   max-width: 100%;
   margin-top: 0;
   object-fit: cover;
