--- a/css/main.css
+++ b/css/main.css
@@ -25,7 +25,6 @@ body {
   padding: 0.35rem 0.9rem;
   text-decoration: none;
   font-size: 0.95rem;
-
   background: #020617;
   border: 2px solid #1f2937;
   border-bottom: none;
@@ -37,7 +36,6 @@ body {
   color: #ffffff;
   border-color: #fb923c;
   background: #fb923c;
-
 }
 
 .nav-bar a:hover,
@@ -76,9 +74,7 @@ body {
   max-width: 1000px;
   border: 2px solid #000;
   box-shadow: 6px 6px 0 #000;
-  border-radius: 6px;
   display: block;
-  object-fit: cover;
   filter: grayscale(40%) contrast(1.1);
 }
 
@@ -136,10 +132,10 @@ body {
   border: 0.2rem solid #1f2937;
   background: #020617;
   padding: 1rem;
-  box-shadow: 6px 6px 0px #000;
+  box-shadow: 6px 6px #000;
   margin: 1rem 1rem;
   font-family: 'Oxanium', sans-serif;
-  transition: transform 0.2s ease, box-shadow 0.2s ease, border-color 0.2s ease;
+  transition: transform 0.2s ease;
 }
 
 .window-bar {
@@ -147,7 +143,7 @@ body {
   border-bottom: 2px solid #1f2937;
   padding: 0.4rem 0.7rem;
   font-weight: 600;
-  margin-bottom: 0.8rem;
+  margin-bottom: 1rem;
   color: #e5e7eb;
 }
 
@@ -162,11 +158,10 @@ body {
 }
 
 .project-box:hover {
-  transform: translateY(-4px);
+  transform: translateY(-5px);
   border-color: #fb923c;
   box-shadow: 0 20px 45px rgba(0, 0, 0, 1);
 }
-
 
 .btn-small {
   padding: 0.4rem 0.8rem;
@@ -174,19 +169,18 @@ body {
   border: 2px solid #fed7aa;
   text-decoration: none;
   color: #fed7aa;
-  font-weight: 600;
 }
 
 .view-work {
   display: inline-block;
   padding: 0.4rem 0.8rem;
   background: #fb923c;
-  border: 2px solid #fb923c;
+  border: 4px solid #b1601e;
   text-decoration: none;
   color: #111827;
   font-weight: 600;
   margin-top: 2rem;
-  margin-left: 2rem;
+  margin-left: 1.8rem;
   font-family: 'Oxanium', sans-serif;
 }
 
@@ -199,7 +193,6 @@ body {
   outline: 2px solid #fef3c7;
   outline-offset: 2px;
 }
-
 
 .site-header {
   display: flex;
@@ -244,7 +237,6 @@ body {
   font-size: 0.75rem;
   color: #9ca3af;
   font-family: 'Oxanium', sans-serif;
-
 }
 
 @media (max-width: 60rem) { 
@@ -268,11 +260,10 @@ body {
     padding: 0.75rem 1rem;
   }
   .nav-bar {
-    width: 100%;
     display: block;
-    padding: 0.5rem 0;
+    width: 100%;
+    padding: 0.5rem;
     background: #020617;
-    border-top: 1px solid #1f2937;
     margin-top: 0.75rem;
   }
   .nav-bar a {
@@ -281,9 +272,8 @@ body {
     text-align: center;
     font-size: 0.85rem;
     padding: 0.5rem;
-    margin-bottom: 0.3rem;
+    margin-bottom: 0.5rem;
     border-radius: 4px;
-    border: 2px solid #1f2937;
   }
   .nav-bar a:last-child {
     margin-bottom: 0;
@@ -308,11 +298,6 @@ body {
     flex-wrap: wrap;
     justify-content: center;
     gap: 0.5rem;
-  }
-
-  .quick-grid a {
-    flex: 1 1 100%;
-    text-align: center;
   }
 }
 
